fix doc navdrawer vertical overflow issue

--- a/assets/sass-project/project.scss
+++ b/assets/sass-project/project.scss
@@ -42,6 +42,10 @@
     }
   }
 
+  .doc-navdrawer-body {
+    min-height: 100%;
+  }
+
   .doc-toolbar {
     position: fixed;
 
